change index + server address

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-
+<html>
+	<head>
+		<meta charser="utf-8">
+		<title>Raspi Server</title>
+	</head>
 <body>
-	<h1>Je suis un titre de niveau 1 du serveur Python</h1>
+	<h1>I'm the La fabrique à histoires's Raspi server</h1>
+	<h2>Some indications for the POST requests</h2>
 </body>
+</html>
